fixed the jumping button

--- a/client/src/app/components/passport-photo-instructions/passport-photo-instructions.component.css
+++ b/client/src/app/components/passport-photo-instructions/passport-photo-instructions.component.css
@@ -8,29 +8,44 @@
 }
 mat-stepper {
   padding: 5% 2%;
-  height: 80vh;
+  /* height: 80vh; */
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
 .init-btn-container-bottom {
-  position: absolute;
-  bottom: 10vh;
+  justify-self: flex-end;
   display: flex;
   justify-content: flex-end;
-  width: 85%;
+  width: 100%;
 }
+
 .btn-container-bottom {
-  position: absolute;
-  bottom: 10vh;
+  /* position: absolute; */
   display: flex;
   justify-content: space-between;
-  width: 85%;
+  align-items: center;
+  width: 100%;
 }
 
 h1 {
   margin-top: 10%;
   text-align: center;
+}
+
+form {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.instruction-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
